2000-03-08  Eric Melski  <ericm@scriptics.com>

	* profiler.test:
	* profiler.tcl: Added tracking of descendant time; changed definition of
	total time to include compile time (which makes determination of exclusive
	time (time in a function but not in its descendants) easier).

2000-03-03  Eric Melski  <ericm@scriptics.com>

	* profiler.tcl: Added profiler::reset function and enhanced 
	profiler::sortFunctions

	* profiler.n: Updated documentation.

2000-02-24  Eric Melski  <ericm@scriptics.com>

	* profiler.tcl: Fixed dump command output to include
	the name of the function being dumped.

2000-02-17  Eric Melski  <ericm@scriptics.com>

	* pkgIndex.tcl: package index for profiler.

	* man.macros: 
	* profiler.n: Doc for profiler.

	* profiler.test: Tests for profiler.

	* profiler.tcl: Simple Tcl function-level profiler.
