@@ -6,17 +6,22 @@
 # Copyright (c) 1998-2000 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: profiler.test,v 1.5 2000/03/09 00:07:41 ericm Exp $
+# RCS: @(#) $Id: profiler.test,v 1.6 2000/03/09 19:50:02 ericm Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
     namespace import ::tcltest::*
 }
 
+# Add the test script dir to the auto_path, so that we can package require
+# profiler
+set auto_path [linsert $auto_path 0 [file dirname [info script]]]
+
 test profiler-1.0 {profiler::init redirects the proc command} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
-	#	package require profiler
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	list [interp alias {} proc] [info commands ::_oldProc]
@@ -27,7 +32,9 @@ test profiler-1.0 {profiler::init redirects the proc command} {
 
 test profiler-2.0 {profiler creates two wrapper proc and real proc} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc foo {} {
@@ -40,7 +47,9 @@ test profiler-2.0 {profiler creates two wrapper proc and real proc} {
 } [list foo fooORIG]
 test profiler-2.1 {profiler creates procs in correct scope} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	namespace eval foo {}
@@ -54,7 +63,9 @@ test profiler-2.1 {profiler creates procs in correct scope} {
 } [list ::foo::foo ::foo::fooORIG]
 test profiler-2.2 {profiler creates procs in correct scope} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	namespace eval foo {
@@ -69,7 +80,9 @@ test profiler-2.2 {profiler creates procs in correct scope} {
 } [list ::foo::foo ::foo::fooORIG]
 test profiler-2.3 {profiler creates procs in correct scope} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	namespace eval foo {
@@ -86,7 +99,9 @@ test profiler-2.3 {profiler creates procs in correct scope} {
 } [list ::foo::bar::foo ::foo::bar::fooORIG]
 test profiler-2.4 {profiler creates procs in correct scope} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	namespace eval foo {
@@ -103,7 +118,9 @@ test profiler-2.4 {profiler creates procs in correct scope} {
 
 test profiler-3.1 {profiler wrappers do profiling} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -123,7 +140,9 @@ test profiler-3.1 {profiler wrappers do profiling} {
 
 test profiler-4.1 {profiler::print produces nicer output than dump} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -147,7 +166,9 @@ Caller distribution:
 
 test profiler-5.1 {profiler respects enabled flag} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -174,7 +195,9 @@ Caller distribution:
 
 test profiler-6.1 {profiler handles functions with funny names} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo(bar) {} {
@@ -191,7 +214,9 @@ test profiler-6.1 {profiler handles functions with funny names} {
 
 test profiler-7.1 {sortFunctions} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	catch {profiler::sortFunctions} res
@@ -203,7 +228,9 @@ test profiler-7.1 {sortFunctions} {
 nonCompileTime, totalRuntime, avgExclusiveRuntime, or avgRuntime"
 test profiler-7.2 {sortFunctions} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -220,7 +247,9 @@ test profiler-7.2 {sortFunctions} {
 } [list [list ::bar 1] [list ::foo 2]]
 test profiler-7.3 {sortFunctions} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -237,7 +266,9 @@ test profiler-7.3 {sortFunctions} {
 } 0
 test profiler-7.4 {sortFunctions} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -254,7 +285,9 @@ test profiler-7.4 {sortFunctions} {
 } 0
 test profiler-7.5 {sortFunctions} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -272,7 +305,9 @@ test profiler-7.5 {sortFunctions} {
 
 test profiler-8.1 {reset} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -292,7 +327,9 @@ test profiler-8.1 {reset} {
 } [list callCount 0 callerDist [list ]]
 test profiler-8.2 {reset with a pattern} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -318,7 +355,9 @@ test profiler-8.2 {reset with a pattern} {
 
 test profiler-9.1 {dump for multiple functions} {
     set c [interp create]
+    interp alias $c parentSet {} set
     set result [$c eval {
+	set auto_path [parentSet auto_path]
 	package require profiler
 	profiler::init
 	proc ::foo {} {
@@ -340,5 +379,8 @@ test profiler-9.1 {dump for multiple functions} {
 	    [list callCount $bar(callCount) callerDist $bar(callerDist)]
 } [list [list callCount 2 callerDist [list GLOBAL 2]] \
 	[list callCount 1 callerDist [list GLOBAL 1]]]
+
+catch {unset foo}
+catch {unset bar}
 
 ::tcltest::cleanupTests
